# municipalities-coordinates

./: .env.local  .env.production  .gitignore  LICENSE  README.md  build-search.py  build-shacl.py  build-web.py  build.py  generate-file.ts  get-coordinates.py  index.html  kommunenummer-generated.ttl  kommunenummer-koordinater.ttl  kommunenummer.rdf  kommunenummer.ttl  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  search.py  tsconfig.json  vercel.json  vercel.sh  vite.config.js
.ldo/: kommunenummerMunicipality.context.ts  kommunenummerMunicipality.schema.ts  kommunenummerMunicipality.shapeTypes.ts  kommunenummerMunicipality.typings.ts  municipalities.context.ts  municipalities.schema.ts  municipalities.shapeTypes.ts  municipalities.typings.ts  service.context.ts  service.schema.ts  service.shapeTypes.ts  service.typings.ts  serviceMunicipality.context.ts  serviceMunicipality.schema.ts  serviceMunicipality.shapeTypes.ts  serviceMunicipality.typings.ts  stedsnavn.context.ts  stedsnavn.schema.ts  stedsnavn.shapeTypes.ts  stedsnavn.typings.ts
.whoosh/: _municipalities_1.toc  municipalities_ch037q8ekv4mjkc5.seg  municipalities_jsrvn2l574edbbzf.seg  municipalities_s31glxxh4jw93efh.seg  municipalities_tcgd4d0ibwsv284k.seg  municipalities_tqukrloklkhqedi5.seg
public/: prism.css
shapes/: municipalities.shex  service.shacl  service.shaclc  serviceMunicipality.shex  stedsnavn.shex
src/: main.tsx
src/components/front-page/: documentation.mdx  index.tsx  introduction.mdx
src/components/loading/: index.tsx
src/styles/: global.css
(+6 files in other folders)
