[project]
name = "municipalities-coordinates"
version = "0.0.1"
description = ""
authors = [
    { name = "Arne Hassel", email = "arne.hassel@capgemini.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13.0"
dependencies = [
    "rdflib (>=7.1.3,<8.0.0)",
    "whoosh (>=2.7.4,<3.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "shaclc (>=0.1.1,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
